# gleich

./: .gitignore  LICENSE  README.md  routes.json  stack.yml
.github/workflows/: routes.yml  stack.yml
posts/editor/: setup.md
posts/experience/: 2020-internship.md
standard_documents/workflows/: fsync.yml
update/: pyproject.toml  update_routes.py
