[tool.poetry]
name = "update"
version = "0.1.0"
description = "Update information based off my API"
authors = ["Matthew Gleich <email@mattglei.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
loguru = "^0.5.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
